# mafn_kernel

./: .gitignore  CMakeLists.txt  Makefile  config.mk  grub.cfg  linker.ld
make/arch/i386/: config.mk
src/: mafn_kernel.c  mafn_term.c  mafn_term.h
src/kernel/: Makefile  chardev.c  mafn_kernel.c
src/kernel/arch/i386/: GDT.c  GDT_asm.s  IDT.c  IDT_asm.s  boot.s  mafn_term.c  mafn_vga.c  print.c  vga.c  vga.h  vgaterm.c
src/kernel/arch/i386/drivers/: ps2_keyboard.c  ps2_scancodes.c  ps2_scancodes.h
src/kernel/arch/i386/interrupts/: IDT.c  IDT_asm.s  IRQ.c  IRQ_asm.s  ISR.c  ISR_asm.s  PIC.c
src/kernel/drivers/: ps2_keyboard.c  ps2_scancodes.c  serial_ports.c
src/kernel/include/kernel/: GDT.h  IDT.h  chardev.h  funptr.h  mafn_term.h  numerics.h  print.h  vgaterm.h
src/kernel/include/kernel/asm/: io.h
src/kernel/include/kernel/drivers/: ps2_keyboard.h  ps2_scancodes.h  serial_ports.h
src/kernel/include/kernel/interrupts/: IDT.h  IRQ.h  ISR.h  PIC.h
src/kernel/include/kernel/memory/: flat_heap.h
src/kernel/memory/: flat_heap.c
src/lib/: string.c
src/libc/: Makefile  string.c
src/libc/include/: string.h
